--- a/templates/main.html
+++ b/templates/main.html
@@ -275,7 +275,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <button type="button" class="btn btn-secondary btn-lg btn-block" style="position: sticky; bottom: 0; background-color: #191970;" onclick="document.location = 'aboutthiswebsite'">説明ページ</button>
+    <button type="button" class="btn btn-secondary btn-lg btn-block shadow-lg p-3 mb-5 bg-white rounded" style="position: sticky; bottom: 0; background-color: #191970;" onclick="document.location = 'aboutthiswebsite'">説明ページ</button>
 
   </body>
 </html>
