--- a/templates/aboutthiswebsite.html
+++ b/templates/aboutthiswebsite.html
@@ -15,8 +15,53 @@
    </head>
    <body>
       <div class="container-fluid" style="padding: 0px; color: #708090;">
+         <div class="row justify-content-center" style="padding: 70px; margin: 0px; background-color: #FF6347; color: #F5FFFA;">
+            <h1>1. このウェブサイトについて</h1>
+         </div>
+         <div class="row justify-content-center" style="padding: 70px; margin: 0px; background-color: #FF6347;color: #F5FFFA;">
+            <h5>対抗戦の最大のデメリット、<u><b>「相手を探すのに時間がかかる」を解消するため</b></u>にこのウェブサイトを使ってください！
+            </h5>
+         </div>
+         <div class="row justify-content-center" style="padding: 70px; margin: 0px; background-color: #FF6347;color: #F5FFFA;">
+            <h5>これまで対抗戦をしたいのになかなかちょうどいい相手が見つからない、なんてことありませんでしたか？<u><b>リーグマッチをするとすぐに敵とマッチングする</b></u>それなのに対抗戦の相手となるとなかなか丁度いい相手が見つからない
+            </h5>
+         </div>
+         <div class="row justify-content-center" style="padding: 70px; margin: 0px; background-color: #FF6347;color: #F5FFFA;">
+            <h5>特に平均ウデマエがS＋出会ったりX前半の場合、対抗戦相手を見つけるのは至難のわざです
+            </h5>
+         </div>
+         <div class="row justify-content-center" style="padding: 70px; margin: 0px; background-color: #FF6347;color: #F5FFFA;">
+            <h5>対抗戦をするときも、リーグマッチのように、自動的に似たウデマエのチームとマッチングできれば楽なのになー、と思ったのがきっかけでこのウェブサイトを作りました
+            </h5>
+         </div>
+         <div class="row justify-content-center" style="padding: 70px; margin: 0px; background-color: #FF6347;color: #F5FFFA;">
+            <h5>イメージとしては、自分のチームのプレーヤーの情報を入力し募集すると、ガチマッチやリーグマッチのように、<u><b>似た条件で現在募集している他のチームと自動的にマッチング</b></u>します。
+            </h5>
+         </div>
+   
+         <div class="row justify-content-center" style="padding: 70px; margin: 0px; background-color: #FF6347;color: #F5FFFA;">
+            <h5>Twitterで「対抗戦相手募集」と検索して、<u><b>一つ一つ投稿を見ていくよりも断然早い</b></u>です。
+            </h5>
+         </div>
+   
+         <div class="row justify-content-center" style="padding: 70px; margin: 0px; background-color: #FF6347;color: #F5FFFA;">
+            <h5>ただ、このウェブサイトが機能するにはたくさんのユーザーさんに使ってもらう必要があります。なので、<u><b>是非皆さんのスプラ友達にこのウェブサイトを紹介してください！</b></u>
+            </h5>
+         </div>
+         <div class="row justify-content-center" style="padding: 70px; margin: 0px; background-color: #FF6347;color: #F5FFFA;">
+            <h5>対抗戦をする人が少ない理由の一つとして、まだ対抗戦という言葉自体知らないスプラプレーヤーがたくさんいるということが挙げられます。
+            </h5>
+         </div>
+         <div class="row justify-content-center" style="padding: 70px; margin: 0px; background-color: #FF6347;color: #F5FFFA;">
+            <h5>僕なりに「対抗戦とは何か」をまとめてみたのでぜひ読んで、対抗戦について学んで行ってください
+            </h5>
+         </div>
+         <div class="row justify-content-center" style="padding: 70px; margin: 0px; background-color: #FF6347;color: #F5FFFA;">
+            <h5><a href="howtouse">また、このウェブサイトの使い方ページもご参照ください</a>
+            </h5>
+         </div>
          <div class="row justify-content-center">
-            <h1>1. 対抗戦とは何か</h1>
+            <h1>2. 対抗戦とは何か</h1>
          </div>
          <div class="row justify-content-center">
             <h3>・ リグマとの違い</h3>
@@ -116,28 +161,7 @@
             </tbody>
          </table>
       </div>
-      <div class="row justify-content-center" style="padding: 70px; margin: 0px; background-color: #FF6347; color: #F5FFFA;">
-         <h1>2. このウェブサイトについて</h1>
-      </div>
-      <div class="row justify-content-center" style="padding: 70px; margin: 0px; background-color: #FF6347;color: #F5FFFA;">
-         <h5>対抗戦の最大のデメリット、<u><b>「相手を探すのに時間がかかる」を解消するため</b></u>にこのウェブサイトを使ってください！
-         </h5>
-      </div>
 
-      <div class="row justify-content-center" style="padding: 70px; margin: 0px; background-color: #FF6347;color: #F5FFFA;">
-         <h5>イメージとしては、自分のチームのプレーヤーの情報を入力し募集すると、ガチマッチやリーグマッチのように、<u><b>似た条件で現在募集している他のチームと自動的にマッチング</b></u>します。
-         </h5>
-      </div>
-
-      <div class="row justify-content-center" style="padding: 70px; margin: 0px; background-color: #FF6347;color: #F5FFFA;">
-         <h5>Twitterで「対抗戦相手募集」と検索して、<u><b>一つ一つ投稿を見ていくよりも断然早い</b></u>です。
-         </h5>
-      </div>
-
-      <div class="row justify-content-center" style="padding: 70px; margin: 0px; background-color: #FF6347;color: #F5FFFA;">
-         <h5>ただ、このウェブサイトが機能するにはたくさんのユーザーさんに使ってもらう必要があります。なので、<u><b>是非皆さんのスプラ友達のこのウェブサイトを紹介してください！</b></u>
-         </h5>
-      </div>
     </div>
     <button type="button" class="btn btn-secondary btn-lg btn-block" style="position: sticky; bottom: 0; background-color: #F4A460; padding: 10px;" onclick="document.location = 'home'">戻る</button>
    </body>
