--- a/templates/main.html
+++ b/templates/main.html
@@ -10,16 +10,17 @@
         #spinner{
             display: none;
         }
+
     </style>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   </head>
   <body>
    
-    <div class="container-fluid" style="padding: 0px; color: #708090;">
+    <div class="container-fluid" style="padding: 0px; color: #708090; ">
         
         <div class="row justify-content-center">
-            <h1 style="padding: 70px;">対抗戦がしたいだろ〜　by [HsG]あそしーん</h1>
+            <h1 style="padding: 70px;">対抗戦がしたいだろ〜　<br>by [HsG]あそしーん</h1>
         </div>
         <div class="row justify-content-center">
             <h4 style="display: none; color: #ff4000;" id="loginsuccess">:ログインしました({{email}})
@@ -39,6 +40,10 @@
                 top: 1100,
                 behavior: 'smooth'
               })"><u>{{ message }}</u></h3>
+
+        </div>
+        <div class="row justify-content-center" style="padding: 50px; margin: 0px">
+            <h3 style="color: red; overflow: scroll;"><u>{{ emptyfields }}</u></h3>
 
         </div>
         <form action="#" method="POST" id="mainform">
@@ -170,7 +175,7 @@
                     <div class="input-group-prepend">
                       <span class="input-group-text">備考</span>
                     </div>
-                    <textarea class="form-control" aria-label="備考" form="mainform" name="note"></textarea>
+                    <textarea class="form-control" aria-label="備考" form="mainform" name="note" placeholder="自分のツイッターIDを入力すれば、トラブルがあった場合にツイッターで連絡をとることができます"></textarea>
                   </div>
             </div>
             </div>
@@ -204,7 +209,7 @@
         <div class="col-sm-12 col-md-4">
             <h1>相手の情報</h1>
         </div>
-        <div class="col-sm-12 col-md-8" style="padding: 40px;background-color: #6495ED; color: white">
+        <div class="col-sm-12 col-md-8" style="padding: 40px;background-color: #6495ED; color: white;word-wrap: break-word;">
             <h2 style="padding: 40px;">Eメール：{{ similarmatch.email }}</h2>
             <h2 style="padding: 40px;">ルール：
                 {% if similarmatch.rule == "turf"%}
@@ -258,7 +263,15 @@
         <br>
         {%endfor%}
     </h2> -->
-        
+        <div class="row" style="background-color: #303030; color: white; word-wrap: break-word; padding: 70px;">
+            <div class="col-sm-12 col-md-2">お問い合わせ
+            </div>
+            <div class="col-sm-12 col-md-5"><a href="https://twitter.com/Shun_Nipponese" style="color: white;">あそしーんのTwitter:@Shun_Nipponese</a>
+            </div>
+            <div class="col-sm-12 col-md-5">
+                <a href="https://twitter.com/Holme_Game" style="color: white;">ホームズのTwitter:@Holme_Game</a>
+            </div>
+        </div>
     </div>
     <script>
         var url = window.location.href
@@ -276,7 +289,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <button type="button" class="btn btn-secondary btn-lg btn-block" style="position: sticky; bottom: 0; background-color: #191970;" onclick="document.location = 'aboutthiswebsite'">説明ページ</button>
-
+    
   </body>
 </html>
 
