--- a/templates/aboutthiswebsite.html
+++ b/templates/aboutthiswebsite.html
@@ -57,7 +57,7 @@
             </h5>
          </div>
          <div class="row justify-content-center" style="padding: 70px; margin: 0px; background-color: #FF6347;color: #F5FFFA;">
-            <h5><a href="howtouse">また、このウェブサイトの使い方ページもご参照ください</a>
+            <h5><a href="https://www.notion.so/3ef45e50ad41467cbee51743a0a5ef81">また、このウェブサイトの使い方ページもご参照ください</a>
             </h5>
          </div>
          <div class="row justify-content-center">
