commented out opponent's email

--- a/templates/main.html
+++ b/templates/main.html
@@ -210,7 +210,7 @@
             <h1>相手の情報</h1>
         </div>
         <div class="col-sm-12 col-md-8" style="padding: 40px;background-color: #6495ED; color: white;word-wrap: break-word;">
-            <h2 style="padding: 40px;">Eメール：{{ similarmatch.email }}</h2>
+<!--             <h2 style="padding: 40px;">Eメール：{{ similarmatch.email }}</h2> -->
             <h2 style="padding: 40px;">ルール：
                 {% if similarmatch.rule == "turf"%}
                 ナワバリ
