--- a/templates/main.html
+++ b/templates/main.html
@@ -18,18 +18,14 @@
   <body>
    
     <div class="container-fluid" style="padding: 0px; color: #708090; ">
-        
-        <div class="row justify-content-center">
-            <h1 style="padding: 70px;">対抗戦がしたいだろ〜　<br>by [HsG]あそしーん</h1>
-        </div>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light" style="position: sticky; top: 0">
   <a class="navbar-brand" href="#">メニュー</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
-      <li class="nav-item active">
+      <li class="nav-item">
         <a class="nav-link" href="aboutthiswebsite">説明ページ <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
@@ -38,6 +34,10 @@
     </ul>
   </div>
 </nav>
+        <div class="row justify-content-center">
+            <h1 style="padding: 70px;">対抗戦がしたいだろ〜　<br>by [HsG]あそしーん</h1>
+        </div>
+      
         <div class="row justify-content-center">
             <h4 style="display: none; color: #ff4000;" id="loginsuccess">:ログインしました({{email}})
             </h4>        
