--- a/templates/main.html
+++ b/templates/main.html
@@ -18,7 +18,7 @@
   <body>
    
     <div class="container-fluid" style="padding: 0px; color: #708090; ">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light" style="position: sticky; top: 0; z-index: 3">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="position: sticky; top: 0; z-index: 3; background-color: #303030; color: white;">
   <a class="navbar-brand" href="#">メニュー</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -308,6 +308,3 @@
      -->
   </body>
 </html>
-
-       
-   
