--- a/templates/login.html
+++ b/templates/login.html
@@ -20,6 +20,9 @@
         <div class="row justify-content-center" style="padding: 40px;">
             <h1>対抗戦がしたいだろ〜　by [HsG]あそしーん</h1>
         </div>
+        <div class="row justify-content-center" style="padding: 10px;">
+          <h3><a href="https://www.notion.so/3ef45e50ad41467cbee51743a0a5ef81">使い方ページ</a></h3>
+      </div>
         <div class="row justify-content-center" style="padding: 40px;">
             <h1 style="color: #ff4000;">ログイン</h1>
             <h1 style="display: none; color: #ff4000;" id="accountexist">:既に使われています。ログインしてください。
