--- a/templates/main.html
+++ b/templates/main.html
@@ -36,6 +36,8 @@
 </nav>
         <div class="row justify-content-center">
             <h1 style="padding: 70px;">対抗戦がしたいだろ〜　<br>by [HsG]あそしーん</h1>
+            <h1 style="padding: 70px;">ユーザーの数：{{numofusers}}</h1>
+
         </div>
       
         <div class="row justify-content-center">
